2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/17_println_plusieurs.deca
// Description:
//    Programme println plusieurs elements
// Resultats:
//     Bonjour hello evry 
//      body
// Historique:
//    cree le 20/12/2023


{
    println("Bonjour ", "hello ", "every ");
    println("body");
}