2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/30_AsmAvecPlsString.deca
// Description:
//    Programme utilisation de plusieurs string dans  le corps de asm
// Resultats:
//      Programme incorrecte syntaxiquement : 9:30: mismatched input ',' expecting ')'
// Historique:
//    cree le 18/01/2023
class H {
    int f;
    void F(int x) asm ("hello", "world !") ;
}